Welcome livereload by grunt.

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block head %}
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
 {% endblock %}
 
 {% block body %}
