--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -6,6 +6,10 @@
 	<!--<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">-->
 	{% block head %}
 	{% endblock %}
+	<script>document.write('<script src="http://'
+	    + (location.host || 'localhost').split(':')[0]
+	    + ':35729/livereload.js?snipver=1"></'
+	    + 'script>')</script>
 </head>
 <body>
 	{% block body %}
