Bootstraping ui work.

--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<title>IPLatform</title>
 	<!--<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">-->
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/layout.css') }}">
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+	<script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 	{% block head %}
 	{% endblock %}
 	<script>document.write('<script src="http://'
