--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,10 +1,9 @@
 {% extends "layout.html" %}
 
 {% block head %}
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/index.css') }}">
 {% endblock %}
 
 {% block body %}
-<h2>Hi! {{ name }}!</h2>
-<h1>Welcome IPLatform!</h1>
+<h1>Welcome! iPlatform</h1>
 {% endblock %}
