--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -1,5 +1,9 @@
 {% extends "layout.html" %}
 
+{% block head %}
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/login.css') }}">
+{% endblock %}
+
 {% block body %}
 <h1>IPLatform</h1>
 <form action="{{ url_for('login') }}" method=post>
