--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -6,7 +6,7 @@
 	<!--<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">-->
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/layout.css') }}">
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-	<script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap-theme.min.css') }}">
 	{% block head %}
 	{% endblock %}
 	<script>document.write('<script src="http://'
@@ -17,5 +17,6 @@
 <body>
 	{% block body %}
 	{% endblock %}
+	<script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 </body>
 </html>
