--- a/web/templates/containers.html
+++ b/web/templates/containers.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block head %}
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/container.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/containers.css') }}">
 {% endblock %}
 
 {% block body %}
