--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -14,7 +14,7 @@
 
       <div class="masthead clearfix">
         <div class="inner">
-          <h3 class="masthead-brand">Cover</h3>
+          <h3 class="masthead-brand">iPlatform</h3>
           <ul class="nav masthead-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#">Features</a></li>
@@ -24,8 +24,8 @@
       </div>
 
       <div class="inner cover">
-        <h1 class="cover-heading">Cover your page.</h1>
-        <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+        <h1 class="cover-heading">IPLatform</h1>
+        <p class="lead">PaaS engine using Docker.</p>
         <p class="lead">
           <a href="#" class="btn btn-lg btn-default">Learn more</a>
         </p>
