--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -17,14 +17,15 @@
 
 <div class="container">
 
-  <form class="form-signin" role="form">
-    <h2 class="form-signin-heading">Please sign in</h2>
-    <input type="email" class="form-control" placeholder="Email address" required autofocus>
-    <input type="password" class="form-control" placeholder="Password" required>
+  <form class="form-login" role="form" action="{{ url_for('login') }}" method=post>
+    <h2 class="form-login-heading">Login</h2>
+    <input name="name" type="text" class="form-control" placeholder="Name" required autofocus>
+    <input name="password" type="password" class="form-control" placeholder="Password" required>
     <label class="checkbox">
       <input type="checkbox" value="remember-me"> Remember me
     </label>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+    <p style="margin: 20px 0;">If you don't sign in, goto <a href={{ url_for("signup") }}>Sign in</a></p>
   </form>
 
 </div> <!-- /container -->
