--- a/web/templates/signup.html
+++ b/web/templates/signup.html
@@ -16,14 +16,12 @@
 
 <div class="container">
 
-  <form class="form-signin" role="form">
+  <form class="form-signin" role="form" action="{{ url_for('signup') }}" method=post>
     <h2 class="form-signin-heading">Please sign in</h2>
-    <input type="email" class="form-control" placeholder="Email address" required autofocus>
-    <input type="password" class="form-control" placeholder="Password" required>
-    <label class="checkbox">
-      <input type="checkbox" value="remember-me"> Remember me
-    </label>
+    <input name="name" type="text" class="form-control" placeholder="Name" required autofocus>
+    <input name="password" type="password" class="form-control" placeholder="Password" required>
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    <p style="margin: 20px 0;">If you already sign in, goto <a href={{ url_for("login") }}>Login</a></p>
   </form>
 
 </div> <!-- /container -->
