--- a/web/static/css/login.css
+++ b/web/static/css/login.css
@@ -3,33 +3,33 @@ body {
   padding-bottom: 40px;
   padding-top: 40px; }
 
-.form-signin {
+.form-login {
   margin: 0 auto;
   max-width: 330px;
   padding: 15px; }
 
-.form-signin .form-signin-heading, .form-signin .checkbox {
+.form-login .form-login-heading, .form-login .checkbox {
   margin-bottom: 10px; }
 
-.form-signin .checkbox {
+.form-login .checkbox {
   font-weight: normal; }
 
-.form-signin .form-control {
+.form-login .form-control {
   box-sizing: border-box;
   font-size: 16px;
   height: auto;
   padding: 10px;
   position: relative; }
 
-.form-signin .form-control:focus {
+.form-login .form-control:focus {
   z-index: 2; }
 
-.form-signin input[type="email"] {
+.form-login input[type="email"] {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
   margin-bottom: -1px; }
 
-.form-signin input[type="password"] {
+.form-login input[type="password"] {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
   margin-bottom: 10px; }
