--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -7,6 +7,8 @@
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/layout.css') }}">
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap-theme.min.css') }}">
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/animate.min.css') }}">
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	{% block head %}
 	{% endblock %}
 	<script>document.write('<script src="http://'
