--- a/web/templates/containers.html
+++ b/web/templates/containers.html
@@ -2,11 +2,12 @@
 
 {% block head %}
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/containers.css') }}">
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/vue/0.10.6/vue.min.js"></script>
 {% endblock %}
 
 {% block body %}
 
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<div id="container" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
