--- a/web/static/css/containers.css
+++ b/web/static/css/containers.css
@@ -58,7 +58,9 @@ body {
   margin-bottom: 20px; }
 
 .placeholder img {
-  border-radius: 50%;
   display: inline-block; }
+
+.icon-btn {
+  cursor: pointer; }
 
 /*# sourceMappingURL=containers.css.map */
