--- a/web/templates/containers.html
+++ b/web/templates/containers.html
@@ -85,32 +85,41 @@
 
 	  <!--launch-->
 	  <div v-show="launch">
-        <div class="row placeholders">
-          <div class="col-xs-3 col-sm-2 placeholder">
-			<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" class="img-circle">
-            <h4>Image</h4>
+		<form>
+          <div class="row placeholders">
+		    <h3 class="page-header">Container's name</h3>
+		  </div>
+          <div class="row placeholders">
+		    <h3 class="page-header">Select OS</h3>
+            <div class="col-xs-3 col-sm-2 placeholder">
+		  	<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="{{ url_for('static', filename='img/ubuntu.png') }}">
+            </div>
+            <div class="col-xs-3 col-sm-2 placeholder">
+		  	<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="{{ url_for('static', filename='img/centos.png') }}">
+            </div>
+            <div class="col-xs-3 col-sm-2 placeholder">
+		  	<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="{{ url_for('static', filename='img/fedora.png') }}">
+            </div>
+            <div class="col-xs-3 col-sm-2 placeholder">
+		  	<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="{{ url_for('static', filename='img/arch.png') }}">
+            </div>
           </div>
-          <div class="col-xs-3 col-sm-2 placeholder">
-			<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" class="img-circle">
-            <h4>Image</h4>
+          <div class="row placeholders">
+		    <h3 class="page-header">Function</h3>
+            <div class="col-xs-3 col-sm-2 placeholder">
+		  	<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="{{ url_for('static', filename='img/jenkins.png') }}">
+            </div>
+            <div class="col-xs-3 col-sm-2 placeholder">
+		  	<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="{{ url_for('static', filename='img/centos.png') }}">
+            </div>
+            <div class="col-xs-3 col-sm-2 placeholder">
+		  	<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="{{ url_for('static', filename='img/fedora.png') }}">
+            </div>
+            <div class="col-xs-3 col-sm-2 placeholder">
+		  	<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="{{ url_for('static', filename='img/arch.png') }}">
+            </div>
           </div>
-          <div class="col-xs-3 col-sm-2 placeholder">
-			<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" class="img-circle">
-            <h4>Image</h4>
-          </div>
-          <div class="col-xs-3 col-sm-2 placeholder">
-			<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" class="img-circle">
-            <h4>Image</h4>
-          </div>
-          <div class="col-xs-3 col-sm-2 placeholder">
-			<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" class="img-circle">
-            <h4>Image</h4>
-          </div>
-          <div class="col-xs-3 col-sm-2 placeholder">
-			<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" class="img-circle">
-            <h4>Image</h4>
-          </div>
-        </div>
+		</form>
       </div>
 
 	  <!--dashboard-->
