--- a/web/templates/containers.html
+++ b/web/templates/containers.html
@@ -88,37 +88,33 @@
 		<form>
           <div class="row placeholders">
 		    <h3 class="page-header">Container's name</h3>
+			<input type="text">
 		  </div>
           <div class="row placeholders">
 		    <h3 class="page-header">Select OS</h3>
             <div class="col-xs-3 col-sm-2 placeholder">
 		  	<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="{{ url_for('static', filename='img/ubuntu.png') }}">
             </div>
-            <div class="col-xs-3 col-sm-2 placeholder">
-		  	<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="{{ url_for('static', filename='img/centos.png') }}">
-            </div>
-            <div class="col-xs-3 col-sm-2 placeholder">
-		  	<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="{{ url_for('static', filename='img/fedora.png') }}">
-            </div>
-            <div class="col-xs-3 col-sm-2 placeholder">
-		  	<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="{{ url_for('static', filename='img/arch.png') }}">
-            </div>
+            <!--<div class="col-xs-3 col-sm-2 placeholder">-->
+			  <!--<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="{{ url_for('static', filename='img/centos.png') }}">-->
+            <!--</div>-->
+            <!--<div class="col-xs-3 col-sm-2 placeholder">-->
+			  <!--<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="{{ url_for('static', filename='img/fedora.png') }}">-->
+            <!--</div>-->
+            <!--<div class="col-xs-3 col-sm-2 placeholder">-->
+			  <!--<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="{{ url_for('static', filename='img/arch.png') }}">-->
+            <!--</div>-->
           </div>
           <div class="row placeholders">
-		    <h3 class="page-header">Function</h3>
+		    <h3 class="page-header">Application</h3>
             <div class="col-xs-3 col-sm-2 placeholder">
 		  	<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="{{ url_for('static', filename='img/jenkins.png') }}">
             </div>
-            <div class="col-xs-3 col-sm-2 placeholder">
-		  	<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="{{ url_for('static', filename='img/centos.png') }}">
-            </div>
-            <div class="col-xs-3 col-sm-2 placeholder">
-		  	<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="{{ url_for('static', filename='img/fedora.png') }}">
-            </div>
-            <div class="col-xs-3 col-sm-2 placeholder">
-		  	<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="{{ url_for('static', filename='img/arch.png') }}">
-            </div>
+            <!--<div class="col-xs-3 col-sm-2 placeholder">-->
+			  <!--<img style="width: 140px; height: 140px;" alt="Generic placeholder image" src="{{ url_for('static', filename='img/gitlab.png') }}">-->
+            <!--</div>-->
           </div>
+		  <input type="submit" value="Create" id="create-container">
 		</form>
       </div>
 
