--- a/web/static/css/containers.css
+++ b/web/static/css/containers.css
@@ -63,4 +63,16 @@ body {
 .icon-btn {
   cursor: pointer; }
 
+#create-container {
+  width: 100%;
+  height: 50px; }
+
+#container-name {
+  width: 100%;
+  height: 50px; }
+
+.iplatform-jumbotron {
+  padding: 10px;
+  margin-botton: 10px; }
+
 /*# sourceMappingURL=containers.css.map */
