--- a/web/static/sass/containers.sass
+++ b/web/static/sass/containers.sass
@@ -64,3 +64,15 @@ body
 
 .icon-btn
   :cursor pointer
+
+#create-container
+  :width 100%
+  :height 50px
+
+#container-name
+  :width 100%
+  :height 50px
+
+.iplatform-jumbotron
+  :padding 10px
+  :margin-botton 10px
