Impremented ajax post to /launch.

--- a/web/static/css/containers.css
+++ b/web/static/css/containers.css
@@ -75,4 +75,10 @@ body {
   padding: 10px;
   margin-botton: 10px; }
 
+.application {
+  opacity: 0.3; }
+
+.enabled {
+  opacity: 1; }
+
 /*# sourceMappingURL=containers.css.map */
