--- a/web/static/css/containers.css
+++ b/web/static/css/containers.css
@@ -81,4 +81,15 @@ body {
 .enabled {
   opacity: 1; }
 
+#over {
+  display: none;
+  background: #000;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.5;
+  z-index: 999; }
+
 /*# sourceMappingURL=containers.css.map */
