--- a/web/static/sass/containers.sass
+++ b/web/static/sass/containers.sass
@@ -9,8 +9,7 @@ body
   :border 0 none
 
 .sidebar
-  :display none
-
+  :display none 
 @media (min-width: 768px)
   .sidebar 
     :background-color #f5f5f5
@@ -78,7 +77,18 @@ body
   :margin-botton 10px
 
 .application
-  opacity: 0.3
+  :opacity 0.3
 
 .enabled
   :opacity 1
+
+#over
+  :display none
+  :background #000
+  :position fixed
+  :left 0
+  :top 0
+  :width 100%
+  :height 100%
+  :opacity 0.5
+  :z-index 999
