--- a/web/templates/containers.html
+++ b/web/templates/containers.html
@@ -2,6 +2,7 @@
 
 {% block head %}
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/containers.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/spinner.css') }}">
 {% endblock %}
 
 {% block body %}
@@ -222,6 +223,28 @@
     </div>
   </div>
 </div>
+
+
+<div class="spinner visible-false">
+  <div class="spinner-container container1">
+    <div class="circle1"></div>
+    <div class="circle2"></div>
+    <div class="circle3"></div>
+    <div class="circle4"></div>
+  </div>
+  <div class="spinner-container container2">
+    <div class="circle1"></div>
+    <div class="circle2"></div>
+    <div class="circle3"></div>
+    <div class="circle4"></div>
+  </div>
+  <div class="spinner-container container3">
+    <div class="circle1"></div>
+    <div class="circle2"></div>
+    <div class="circle3"></div>
+  </div>
+</div>
+
 
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/vue/0.10.6/vue.min.js"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/containers.js') }}"></script>
